WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115478
Incorrect layout for blocks containing ideographs with -webkit-linebox-contain: glyphs, font, inline-box
https://bugs.webkit.org/show_bug.cgi?id=115478
Summary
Incorrect layout for blocks containing ideographs with -webkit-linebox-contai...
Enrica Casucci
Reported
2013-05-01 10:26:39 PDT
Open the attached test case. You'll see that the second glyph in each box is off to the side. <
rdar://problem/13568906
>
Attachments
Test case
(660 bytes, application/xhtml+xml)
2013-05-01 10:27 PDT
,
Enrica Casucci
no flags
Details
Patch
(69.51 KB, patch)
2013-05-01 10:49 PDT
,
Enrica Casucci
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2013-05-01 10:27:17 PDT
Created
attachment 200219
[details]
Test case
Enrica Casucci
Comment 2
2013-05-01 10:28:09 PDT
I discussed this problem with Hyatt and he figured out where the bug is. In RootInlineBox::ascentAndDescentForBox there are cases where we compute ascent and descent without passing the baseline type which causes an incorrect computation in case of ideographs.
Enrica Casucci
Comment 3
2013-05-01 10:49:31 PDT
Created
attachment 200223
[details]
Patch
Dave Hyatt
Comment 4
2013-05-01 13:23:04 PDT
Comment on
attachment 200223
[details]
Patch r=me
Enrica Casucci
Comment 5
2013-05-01 13:36:20 PDT
Committed revision 149450.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug