Incorrect layout for blocks containing ideographs with -webkit-linebox-contain: glyphs, font, inline-box. https://bugs.webkit.org/show_bug.cgi?id=115478.

Reviewed by Dave Hyatt.

Source/WebCore:

Test: fast/block/lineboxcontain/block-with-ideographs.xhtml

When computing ascent and descent we need to take into account
the baseline type. RootInlineBox::ascentAndDescentForBox failed
to do that in few cases.

* rendering/RootInlineBox.cpp:
(WebCore::RootInlineBox::ascentAndDescentForBox):

LayoutTests:

* fast/block/lineboxcontain/block-with-ideographs.xhtml: Added.
* platform/mac/fast/block/lineboxcontain/block-with-ideographs-expected.txt: Added.
* platform/mac/fast/block/lineboxcontain/block-with-ideographs-expected.png : Added.



Canonical link: https://commits.webkit.org/133930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149450 268f45cc-cd09-0410-ab3c-d52691b4dbfc